.metadata/.plugins/org.eclipse.cdt.ui/sum ass 2.build.log
22:35:32 **** Incremental Build of configuration Debug for project sum ass 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\sum ass 2.o" "..\\src\\sum ass 2.c" 
..\src\sum ass 2.c: In function 'main':
..\src\sum ass 2.c:19:14: error: invalid operands to binary & (have 'char *' and 'int')
  scanf("%d%f"&number1,&number2);
        ~~~~~~^

22:35:33 Build Failed. 1 errors, 0 warnings. (took 402ms)

